<resources>
    <string name="app_name">CodeBlocks Banking</string>
    <string name="title_activity_main_user_page">MainUserPageActivity</string>
    <string name="investments">Investments</string>
    <string name="amount">Amount:</string>
    <string name="checking">Checking</string>
    <string name="savings">Savings</string>
    <string name="make_transactions">Make Transactions</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="create_an_account">Create an Account</string>
    <string name="log_out">Log Out</string>

    <!-- The following arrays will be used to populate the database with dummy data-->
    <string-array name="holder_names">
        <item>Bob Dbuilder</item>
        <item>Mark Low</item>
        <item>Jones Jones</item>
        <item>Paul B</item>
        <item>Justin Time</item>
    </string-array>

    <integer-array name="dummy_access_card_no">
        <item>100200300</item>
        <item>200300400</item>
        <item>500600700</item>
        <item>800900100</item>
        <item>700500200</item>
    </integer-array>

    <string-array name="dummy_password">
        <item>password1</item>
        <item>password2</item>
        <item>password3</item>
        <item>password4</item>
        <item>password5</item>
    </string-array>

    <string-array name="spinner_item">
        <item>Checking</item>
        <item>Savings</item>

    </string-array>
    <integer-array name="dummy_checking_account_no">
        <item>1234</item>
        <item>1235</item>
        <item>1236</item>
        <item>1237</item>
        <item>1238</item>
    </integer-array>

    <integer-array name="dummy_savings_account_no">
        <item>4321</item>
        <item>5321</item>
        <item>6321</item>
        <item>7321</item>
        <item>8321</item>
    </integer-array>

    <string-array name="dummy_checking_account_funds">
        <item>1000</item>
        <item>1400</item>
        <item>50000</item>
        <item>3750</item>
        <item>44300</item>
    </string-array>

    <string-array name="dummy_savings_account_funds">
        <item>77000</item>
        <item>2000000</item>
        <item>14000.43</item>
        <item>9999.98</item>
        <item>69000.69</item>
    </string-array>

    <string name="errorLoggingInString">Unable to log in. The access card number or password provided is incorrect.</string>
    <string name="requiredFieldString">This is a required field.</string>

    <string name="title_activity_savings">SavingsActivity</string>
    <string name="amount_for_transaction_listview">Amount</string>
    <string name="date">Date</string>
    <string name="info">Info</string>
    <string name="create_an_investment">Create an Investment</string>
    <string name="current_user_string_key">CURRENT USER ACCESS NUMBER</string>
    <string name="saving_total">Funds: %s</string>
    <string name="page_message_for_checking_account_page">Your account balance is $%.2f    Here are your transactions on this account</string>
    <string name="transactions_message_for_account_page">$%s\n\nHere are the transactions for this account.</string>
    <string name="checkings_funds">Funds:</string>
    <string name="investments_funds">Funds:</string>
    <string name="who_to_send">Who to send to</string>
    <string name="amount_to_send">Amount to send</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="account">Account:</string>
    <string name="dollarSignString"> $ %s</string>
    <string name="balanceString">Balance: $ %s</string>
    <string name="noString">No: %s</string>
    <string name="welcomeString">Welcome %s</string>
    <string name="checking_account_balance_message_on_make_transaction_page">Checking account balance: $%s</string>
    <string name="saving_account_balance_message_on_make_transaction_page">Savings account balance: $%s</string>

</resources>
