<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/make_transactions_menu_item"
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:title="@string/make_transactions" />
    <item
        android:id="@+id/pay_bills_menu_item"
        android:icon="@drawable/ic_payment_black_24dp"
        android:title="@string/pay_bills" />
    <item
        android:id="@+id/create_an_investment_menu_item"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:title="@string/create_an_investment" />
    <item
        android:id="@+id/logout_menu_item"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/log_out" />
</menu>