<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btn_savingsImage"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.031"
        app:srcCompat="@drawable/main_user_page_account_button_pic2" />

    <ImageView
        android:id="@+id/btn_checkingImage"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:elevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_investmentsImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_savingsImage"
        app:layout_constraintVertical_bias="0.511"
        app:srcCompat="@drawable/main_user_page_account_button_pic2" />

    <ImageView
        android:id="@+id/btn_investmentsImage"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_page_toolbar"
        app:layout_constraintVertical_bias="0.931"
        app:srcCompat="@drawable/main_user_page_account_button_pic2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        android:text="@string/savings"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:textColor="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_savingsImage"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintLeft_toLeftOf="@+id/btn_savingsImage"
        app:layout_constraintRight_toRightOf="@+id/btn_savingsImage"
        app:layout_constraintTop_toTopOf="@+id/btn_savingsImage"
        app:layout_constraintVertical_bias="0.218"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/checking"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:textColor="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_checkingImage"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintLeft_toLeftOf="@+id/btn_checkingImage"
        app:layout_constraintRight_toRightOf="@+id/btn_checkingImage"
        app:layout_constraintTop_toTopOf="@+id/btn_checkingImage"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/investments"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:textColor="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_investmentsImage"
        app:layout_constraintHorizontal_bias="0.286"
        app:layout_constraintLeft_toLeftOf="@+id/btn_investmentsImage"
        app:layout_constraintRight_toRightOf="@+id/btn_investmentsImage"
        app:layout_constraintTop_toTopOf="@+id/btn_investmentsImage"
        app:layout_constraintVertical_bias="0.194" />

    <TextView
        android:id="@+id/txt_savingsAmountDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/amount"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/btn_savingsImage"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintLeft_toLeftOf="@+id/btn_savingsImage"
        app:layout_constraintRight_toRightOf="@+id/btn_savingsImage"
        app:layout_constraintTop_toTopOf="@+id/btn_savingsImage"
        app:layout_constraintVertical_bias="0.705" />

    <TextView
        android:id="@+id/txt_checkingAmountDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/amount"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/btn_checkingImage"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintLeft_toLeftOf="@+id/btn_checkingImage"
        app:layout_constraintRight_toRightOf="@+id/btn_checkingImage"
        app:layout_constraintTop_toTopOf="@+id/btn_checkingImage"
        app:layout_constraintVertical_bias="0.571" />

    <TextView
        android:id="@+id/txt_investmentsAmountDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/amount"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/btn_investmentsImage"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintLeft_toLeftOf="@+id/btn_investmentsImage"
        app:layout_constraintRight_toRightOf="@+id/btn_investmentsImage"
        app:layout_constraintTop_toTopOf="@+id/btn_investmentsImage"
        app:layout_constraintVertical_bias="0.576" />
</android.support.constraint.ConstraintLayout>